# CMakeDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/vn/com/vng/quangcv/cmakedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/vn/com/vng/quangcv/cmakedemo/: MainActivity.java
app/src/main/jni/: native-lib.c
app/src/main/res/layout/: activity_main.xml
app/src/test/java/vn/com/vng/quangcv/cmakedemo/: ExampleUnitTest.java
